[package]
name = "restic-interfacer"
version = "0.1.0"
authors = ["8176135 <8176135@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "*"
serde = {features = ["derive"], version = "*"}
serde_json = "*"